created page api and add image feild
