# storage/api-docs/api-docs.json
@@ -87,6 +87,36 @@
                 }
             }
         },
+        "/pages": {
+            "get": {
+                "tags": [
+                    "Page"
+                ],
+                "summary": "Page",
+                "operationId": "Pages",
+                "responses": {
+                    "200": {
+                        "description": "Page",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/PageResponse"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "$ref": "#/components/schemas/BadRequest"
+                    },
+                    "404": {
+                        "$ref": "#/components/schemas/Notfound"
+                    },
+                    "500": {
+                        "$ref": "#/components/schemas/Forbidden"
+                    }
+                }
+            }
+        },
         "/register": {
             "post": {
                 "tags": [
@@ -480,6 +510,28 @@
                         "title": "Not found",
                         "description": "Not found",
                         "type": "string"
+                    }
+                },
+                "type": "object"
+            },
+            "PageResponse": {
+                "title": "Page Response",
+                "description": "Page Response",
+                "properties": {
+                    "data": {
+                        "type": "object",
+                        "example": {
+                            "id": 7,
+                            "title": "fgfdgdfgdfs",
+                            "slug": "fgfdgdfgdfs",
+                            "content": "<p>dfgfdsgsfdgsfdgfdg</p>",
+                            "feature_image": "Screenshot_7.png",
+                            "status": "1",
+                            "user": "Admin",
+                            "categories": "admin",
+                            "created": "2021-12-10T06:01:07.000000Z",
+                            "updated_at": "2021-12-23T06:36:41.000000Z"
+                        }
                     }
                 },
                 "type": "object"
